[BUGFIX] Layout category tree is broken
There are several issues with the layout of the category tree.

When hovering the whole element, the categories (text) get underlined.
The categories text is not aligned properly with the icon and checkbox.
The glow on a checkbox with focus is bigger than the checkbox itself.

This patch fixes these issues by adding CSS for the tree when used in
TCEforms.

Resolves: #56752
Releases: 6.2
Reviewed-on: https://review.typo3.org/28250
Tested-by: Frans Saris
Tested-by: Francois Suter

--- a/typo3/sysext/t3skin/Resources/Public/Css/visual/element_tceforms.css
+++ b/typo3/sysext/t3skin/Resources/Public/Css/visual/element_tceforms.css
@@ -522,3 +522,12 @@ TCEforms Sections
 .t3-form-palette-field-label {
 	text-indent: 2px;
 }
+
+/* - - - - - - - - - - - - - - - - - - - - -
+TCEforms Tree
+- - - - - - - - - - - - - - - - - - - - - */
+.t3-form-field-item .x-tree input.x-tree-node-cb {
+	height: auto;
+	margin: 0 0 0 1px;
+	vertical-align: middle;
+}
