--- a/typo3/sysext/t3skin/Resources/Public/Css/visual/main_content.css
+++ b/typo3/sysext/t3skin/Resources/Public/Css/visual/main_content.css
@@ -60,7 +60,8 @@ tr:hover a {
 	text-decoration: underline;
 }
 
-tr:hover .t3-page-ce a {
+tr:hover .t3-page-ce a,
+tr:hover .x-tree a {
 	text-decoration: none;
 }
 
